--- a/gfg/.env
+++ b/gfg/.env
@@ -1,3 +1,7 @@
 SECRET_KEY = &d80z@yqia8tu12-r+_gv+-gd4&7*mwf$a_+ib!7g_q^gza@9i
-Debug = False
+
+EMAIL_USE_TLS = True
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_HOST_USER = 'aagroupspw@gmail.com'
 EMAIL_HOST_PASSWORD = 0n3H3ll0f@W3bs1t3#
+EMAIL_PORT = 587
